# hello_webgl

./: Cargo.toml  index.html  index.js
pkg/: hello_webgl.d.ts  hello_webgl.js  hello_webgl_bg.wasm  hello_webgl_bg.wasm.d.ts  package.json
src/: app_state.rs  common_funcs.rs  gl_setup.rs  lib.rs
src/programs/: color_2d.rs  color_2d_gradient.rs  mod.rs
src/shaders/fragment/: color_2d.hlsl  color_2d_gradient.hlsl
src/shaders/vertex/: color_2d.hlsl  color_2d_gradient.hlsl
