[package]
name = "hello_webgl"
version = "0.1.0"
authors = ["Toaster <14080501+iamthetoaster@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.50"
lazy_static = "1.4.0"
nalgebra = "0.25.3"
wasm-bindgen = "0.2.73"

[dependencies.web-sys]
version = "0.3.50"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window'
]